--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SD Design Assistant",
+  "name": "Design Wingman - Sketch Rendering with Stable Diffusion",
   "id": "1223479206895787738",
   "api": "1.0.0",
   "main": "code.js",
