--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "SD-Design-Assistant",
+  "name": "sd-design-wingman",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "Design Wingman - Sketch Rendering with Stable Diffusion",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
